--- a/www/apps/templates/index.html
+++ b/www/apps/templates/index.html
@@ -5,14 +5,11 @@
     <title></title>
 </head>
 <body>
-<p>请输入两个数字</p>
-
-
-<form action="/add/" method="get">
-    a: <input type="text" name="a"> <br>
-    b: <input type="text" name="b"> <br>
-
+<form method="post">
+    {% csrf_token %}
+    {{ form }}
     <input type="submit" value="提交">
 </form>
+
 </body>
 </html>
