--- a/CMES/CMS/templates/column.html
+++ b/CMES/CMS/templates/column.html
@@ -1,16 +1,18 @@
 {% extends "base.html" %}
  
 {% block title %}
-{{ column.title }}
+{{ column.name }}
 {% endblock title %}
  
 {% block content %}
-{#    {% for column in  columns %}#}
-{#        <li>#}
-{#            <a href="{{ column.get_absolute_url }}"> {{ column.name }} </a>#}
-{#        </li>#}
-{#    {% endfor %}#}
+<p>栏目名称：{{ column.name }}</p>
 栏目简介：{{ column.intro }}
 栏目文章列表：
-还需要完善
+<ul>
+    {% for article in column.article_set.all %}
+        <li>
+            <a href="{{ article.get_absolute_url }}">{{ article.title }}</a>
+        </li>
+    {% endfor %}
+</ul>
 {% endblock content %}
