--- a/CMES/CMS/templates/index.html
+++ b/CMES/CMS/templates/index.html
@@ -10,5 +10,10 @@
             <a href="{{ column.get_absolute_url }}"> {{ column.name }} </a>
         </li>
     {% endfor %}
+    {% for column in  home_display_columns %}
+        <li>
+            <a href="{{ column.get_absolute_url }}"> {{ column.name }} </a>
+        </li>
+    {% endfor %}
 </ul>
 {% endblock content %}
