--- a/CMES/ScrapyConfig/templates/home.html
+++ b/CMES/ScrapyConfig/templates/home.html
@@ -1,1 +1,13 @@
 {% extends "base.html" %}
+{% block content %}
+    <div class="jumbotron">
+        <div class="container">
+            <h1>个人博客</h1>
+            <h3>学习Django开发的个人博客</h3>
+            <p>通过对django的学习与理解，尝试开发的个人博客网站，目前实现了栏目与网站的添加与显示。</p>
+            <h2>TODO</h2>
+            <p>添加用户注册登陆功能</p>
+            <p>添加用户平台功能</p>
+        </div>
+    </div>
+{% endblock %}
